objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Rejected_Date__c</fullName>
        <label>Accepted/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Expected_Salary__c</fullName>
        <formula>Applicant__r.Current_Expected_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Expected Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>When the offer has been created.</description>
        <label>Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Days__c</fullName>
        <label>PTO Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Salary__c</fullName>
        <formula>Position__r.Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Salary terms not met</fullName>
                </value>
                <value>
                    <fullName>Job offer elsewhere</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Contract Length</fullName>
                </value>
                <value>
                    <fullName>Unavailable for start date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary_Difference__c</fullName>
        <formula>Position_Salary__c  -  Applicant_Expected_Salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Offered__c</fullName>
        <label>Salary Offered</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer pending references</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O# {00000000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Salary_is_required_on_approved_offers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISBLANK( Salary_Offered__c ) ,

            OR( 
                    ISPICKVAL( Status__c , &quot;Offered&quot;) ,
                    ISPICKVAL(Status__c, &quot;Accepted&quot;) ,
                    ISPICKVAL(Status__c, &quot;Rejected&quot;)
                   ) 
          )</errorConditionFormula>
        <errorMessage>You must a salary for a confirmed offer.</errorMessage>
    </validationRules>
</CustomObject>